# sonzai-python

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  SDK_PARITY_AUDIT.md  justfile  openapi-codegen.yaml  openapi.json  pyproject.toml
.githooks/: pre-commit  pre-push
benchmarks/: .gitignore  README.md  __init__.py  requirements.txt
benchmarks/common/: __init__.py  agent_reuse.py  dataset_cache.py  gemini_judge.py  sdk_extras.py  workbench_compat.py
benchmarks/common/tests/: test_agent_reuse_locomo.py  test_bel_extended.py  test_gemini_judge_locomo.py  test_sdk_extras_process.py
benchmarks/convomem/: __main__.py  dataset.py  run.py  scoring.py
benchmarks/convomem/backends/: __init__.py  sonzai.py
benchmarks/convomem/tests/: test_dataset.py  test_scoring.py
benchmarks/lifelong_sotopia/: README.md  __init__.py  __main__.py  compare.py  memory.py  run.py  scenarios.py  scoring.py
benchmarks/lifelong_sotopia/backends/: __init__.py  baseline.py  sonzai.py
benchmarks/lifelong_sotopia/results/: lifelong_sotopia_baseline-none_20260505-175555.jsonl  lifelong_sotopia_baseline-summary_20260505-175722.jsonl  lifelong_sotopia_sonzai_20260505-180956.jsonl
benchmarks/lifelong_sotopia/scenarios_data/: friend-and-friend.json  memory_required.json  mentor-mentee.json  peer-collaborator.json  relationships.json
benchmarks/lifelong_sotopia/tests/: __init__.py  test_memory.py  test_runner.py  test_scenarios.py  test_scoring.py
benchmarks/locomo/: __init__.py  __main__.py  compare.py  dataset.py  prompts.py  run.py  scoring.py
benchmarks/locomo/backends/: __init__.py  mem0.py  sonzai.py
benchmarks/locomo/results/: .gitignore
benchmarks/locomo/tests/: test_compare.py  test_dataset.py  test_end_to_end_fixture.py  test_mem0_backend.py  test_prompts_port.py  test_run_cli.py  test_scoring.py  test_sonzai_backend.py
benchmarks/longmemeval/: HARNESS.md  __init__.py  __main__.py  aggregate.py  dataset.py  inspect.py  run.py  run_loop.sh  scoring.py
benchmarks/longmemeval/backends/: __init__.py  mem0.py  mempalace.py  sonzai.py
benchmarks/longmemeval/results/: mempalace_20260422-105717.jsonl  sonzai_20260423-073411.jsonl
benchmarks/longmemeval/tests/: test_aggregate.py  test_inspect.py
benchmarks/sotopia/: __init__.py  __main__.py  compare.py  run.py  scenarios.py  scoring.py
benchmarks/sotopia/backends/: __init__.py  mem0.py  mempalace.py
benchmarks/sotopia/results/: sotopia_20260423-222834.jsonl  sotopia_mempalace_20260423-203813.jsonl
demos/openai_agents_companion/: README.md  app.py  companion.py  requirements.txt  verify_webhook_e2e.py
demos/personality_shift/: README.md  app.py  presets.py  requirements.txt
docs/superpowers/plans/: 2026-04-22-pydantic-generator-step1.md  2026-04-22-step3-a1-typed-errors.md  2026-04-22-step3-a2-typed-request-bodies.md  2026-04-22-step3-a3-pagination-iterators.md  2026-04-22-step3-a4-typed-streaming-events.md  2026-04-22-step3-a5-retry-backoff.md  2026-04-22-step3-b1-resource-generator-scaffold.md  2026-04-24-convomem-benchmark.md  (+2 more)
scripts/: paginate_audit.py  parity_audit.py  request_body_map.py
scripts/codegen/: _emit.py  _parse.py  generate_resources.py
src/sonzai/: __init__.py  _client.py  _exceptions.py  _http.py  _pagination.py  _request_helpers.py  _retry.py  benchmarks.py  post_processing_model.py  providers.py  sse_chunk.py  types.py  webhook_verify.py
tests/: test_byok.py  test_chat_detached.py  test_chat_streaming_events.py  test_chat_temperature.py  test_client.py  test_codegen.py  test_customizations.py  test_exceptions.py  test_knowledge_org.py  test_longmemeval_scoring_parity.py  test_pagination.py  test_pagination_integration.py  test_request_helpers.py  test_retry.py  test_session_handle.py  test_sessions_async_polling.py  test_sse_chunk.py  test_support.py  test_support_tickets.py  test_typed_bodies.py  test_types.py  test_workbench.py
tests/unit/: test_benchmarks_agent.py
(+814 files in other folders)
