[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonzai"
version = "0.1.0"
description = "Python SDK for the Sonzai Character Engine API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sonzai Labs", email = "eng@sonz.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
keywords = ["sonzai", "ai", "character-engine", "agents", "llm"]

[project.urls]
Homepage = "https://github.com/sonz-ai/sonzai-python"
Documentation = "https://github.com/sonz-ai/sonzai-python#readme"
Repository = "https://github.com/sonz-ai/sonzai-python"
Issues = "https://github.com/sonz-ai/sonzai-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sonzai"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
