[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonzai"
version = "1.4.0"
description = "Python SDK for the Sonzai Mind Layer API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sonzai Labs", email = "engineering@sonz.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
keywords = ["sonzai", "ai", "mind-layer", "agents", "llm"]

[project.urls]
Homepage = "https://github.com/sonz-ai/sonzai-python"
Documentation = "https://github.com/sonz-ai/sonzai-python#readme"
Repository = "https://github.com/sonz-ai/sonzai-python"
Issues = "https://github.com/sonz-ai/sonzai-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
    # Benchmark runtime + dataset tooling — kept in `dev` rather than a
    # separate extras group because the longmemeval parity tests import
    # MemPalace's scoring functions directly from the sibling clone, and
    # `tqdm` + `google-genai` are needed by the benchmark runner itself.
    "tqdm>=4.66",
    "google-genai>=0.3",
    # MemPalace's longmemeval_bench.py imports chromadb at module scope
    # (it's the ChromaDB-backed vector index they ship). Installing it here
    # lets the parity test import MemPalace's ``ndcg`` / ``evaluate_retrieval``
    # verbatim and assert our formulas match THEIR live code — not a frozen
    # copy. This is the scientifically rigorous posture: if they update their
    # scoring, our test sees it immediately.
    "chromadb>=0.5",
    "datamodel-code-generator>=0.25",
    "jinja2>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sonzai"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
